--- a/app/src/main/res/layout/card_post.xml
+++ b/app/src/main/res/layout/card_post.xml
@@ -59,8 +59,7 @@
             app:icon="@drawable/ic_more_vert_24"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintTop_toTopOf="parent"
-            style="@style/Widget.AppTheme.IconButton"
-            />
+            style="@style/Widget.AppTheme.IconButton" />
 
         <androidx.constraintlayout.widget.Barrier
             android:id="@+id/header"
