--- a/app/src/main/res/navigation/nav_main.xml
+++ b/app/src/main/res/navigation/nav_main.xml
@@ -25,6 +25,18 @@
             app:popEnterAnim="@android:anim/fade_in"
             app:popExitAnim="@android:anim/fade_out" />
         <action
+            android:id="@+id/action_feedFragment_to_authentificationFragment"
+            app:destination="@id/authentificationFragment"
+            app:enterAnim="@android:anim/fade_in"
+            app:exitAnim="@android:anim/fade_out"
+            app:popEnterAnim="@android:anim/fade_in"
+            app:popExitAnim="@android:anim/fade_out" />
+
+        <action
+            android:id="@+id/action_feedFragment_to_myDialogFragment"
+            app:destination="@id/myDialogFragment" />
+
+        <action
             android:id="@+id/action_feedFragment_to_registrationFragment"
             app:destination="@id/registrationFragment"
             app:enterAnim="@android:anim/fade_in"
@@ -37,27 +49,23 @@
         android:id="@+id/newPostFragment"
         android:name="ru.netology.nmedia.activity.NewPostFragment"
         android:label="fragment_new_post"
-        tools:layout="@layout/fragment_new_post" >
-        <action
-            android:id="@+id/action_newPostFragment_to_myDialogFragment"
-            app:destination="@id/myDialogFragment" />
-    </fragment>
+        tools:layout="@layout/fragment_new_post" />
     <fragment
         android:id="@+id/imageFragment"
         android:name="ru.netology.nmedia.activity.ImageFragment"
         android:label="ImageFragment"
         tools:layout="@layout/fragment_image"/>
     <fragment
-        android:id="@+id/registrationFragment"
-        android:name="ru.netology.nmedia.activity.RegistrationFragment"
+        android:id="@+id/authentificationFragment"
+        android:name="ru.netology.nmedia.activity.AuthentificationFragment"
         android:label="fragment_registration"
-        tools:layout="@layout/fragment_registration" />
+        tools:layout="@layout/fragment_authentification" />
     <dialog
         android:id="@+id/myDialogFragment"
         android:name="ru.netology.nmedia.activity.MyDialogFragment"
-        android:label="MyDialogFragment" >
-        <action
-            android:id="@+id/action_myDialogFragment_to_feedFragment"
-            app:destination="@id/feedFragment" />
-    </dialog>
+        android:label="MyDialogFragment" />
+    <fragment
+        android:id="@+id/registrationFragment"
+        android:name="ru.netology.nmedia.activity.RegistrationFragment"
+        android:label="RegistrationFragment" />
 </navigation>
