--- a/app/src/main/res/layout/fragment_registration.xml
+++ b/app/src/main/res/layout/fragment_registration.xml
@@ -13,6 +13,29 @@
         android:orientation="vertical"
         android:layout_gravity="center">
 
+        <TextView
+            android:id="@+id/choose_avatar"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:layout_marginBottom="@dimen/common_spacing"
+            android:hint="@string/choose_avatar" />
+
+        <ImageView
+            android:id="@+id/avatar"
+            android:visibility="gone"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_gravity="center" />
+
+        <Button
+            android:id="@+id/take_photo"
+            style="@style/Widget.AppTheme.IconButton"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_gravity="center"
+            android:layout_marginBottom="@dimen/common_spacing"
+            app:icon="@drawable/ic_photo_camera_24" />
+
         <EditText
             android:id="@+id/name"
             android:layout_width="match_parent"
