--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -5,4 +5,5 @@
     <color name="colorAccent">#03DAC5</color>
     <color name="blue">#0066FF</color>
     <color name="black">#000000</color>
+    <color name="Gray">#818181</color>
 </resources>
